add dynamic to DetailRideView screens add masks to OfferPrice and AddBankCard views complete choose payment method

--- a/app/src/main/res/drawable/ic_tick_selected.xml
+++ b/app/src/main/res/drawable/ic_tick_selected.xml
@@ -6,7 +6,7 @@
     android:viewportHeight="15">
 
     <path
-        android:strokeColor="#80000000"
+        android:strokeColor="#1152FD"
         android:strokeWidth="3"
         android:strokeLineJoin="round"
         android:strokeLineCap="round"
