--- a/app/src/main/res/layout/add_bank_card_activity.xml
+++ b/app/src/main/res/layout/add_bank_card_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rootLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -41,10 +42,10 @@
 
 
         <LinearLayout
-            android:gravity="bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
+            android:gravity="bottom"
             android:orientation="vertical">
 
 
@@ -56,6 +57,7 @@
                 android:cursorVisible="true"
                 android:hint="@string/numberBankCard"
                 android:inputType="number"
+                android:maxLength="19"
                 android:nextFocusDown="@+id/valid_until"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
@@ -69,7 +71,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="50dp"
                 android:orientation="horizontal"
                 android:weightSum="1">
 
@@ -83,6 +85,7 @@
                     android:cursorVisible="true"
                     android:hint="@string/valid_until"
                     android:inputType="number"
+                    android:maxLength="5"
                     android:nextFocusDown="@+id/cvc"
                     android:paddingStart="0dp"
                     android:paddingEnd="0dp"
@@ -103,6 +106,7 @@
                     android:cursorVisible="true"
                     android:hint="@string/cvc_cvv"
                     android:inputType="number"
+                    android:maxLength="3"
                     android:nextFocusDown="@+id/last_name"
                     android:paddingStart="0dp"
                     android:paddingEnd="0dp"
@@ -127,14 +131,14 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/offer"
+                android:id="@+id/add_card"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="14dp"
                 android:background="@drawable/btn_style"
                 android:fontFamily="@font/roboto"
                 android:shadowColor="@color/colorBlue"
-                android:text="@string/offerPrice"
+                android:text="@string/addCard"
                 android:textAllCaps="false"
                 android:textSize="16sp" />
 
