--- a/app/src/main/res/layout/full_name_signup_fragment.xml
+++ b/app/src/main/res/layout/full_name_signup_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -54,37 +55,54 @@
             android:orientation="vertical"
             android:weightSum="8">
 
-            <EditText
-                android:id="@+id/first_name"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edt_bg_selector"
-                android:cursorVisible="true"
                 android:hint="@string/your_name"
-                android:nextFocusDown="@+id/last_name"
-                android:paddingStart="0dp"
-                android:paddingEnd="0dp"
-                android:singleLine="true"
-                android:textColor="@android:color/black"
-                android:textColorHint="#60000000"
-                android:textCursorDrawable="@drawable/color_cursor"
-                android:textSize="16sp" />
+                app:hintTextColor="#000000">
 
-            <EditText
-                android:id="@+id/last_name"
+                <EditText
+                    android:id="@+id/first_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edt_bg_selector"
+                    android:cursorVisible="true"
+                    android:hint="@string/your_name"
+                    android:nextFocusDown="@+id/last_name"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"
+                    android:textColorHint="#60000000"
+                    android:textCursorDrawable="@drawable/color_cursor"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:background="@drawable/edt_bg_selector"
-                android:cursorVisible="true"
-                android:hint="@string/youe_famaly"
-                android:paddingStart="0dp"
-                android:paddingEnd="0dp"
-                android:singleLine="true"
-                android:textColor="@android:color/black"
-                android:textColorHint="#60000000"
-                android:textCursorDrawable="@drawable/color_cursor"
-                android:textSize="16sp" />
+                android:hint="@string/your_family"
+                app:hintTextColor="#000000">
+
+                <EditText
+                    android:id="@+id/last_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edt_bg_selector"
+                    android:cursorVisible="true"
+                    android:hint="@string/your_family"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"
+                    android:textColorHint="#60000000"
+                    android:textCursorDrawable="@drawable/color_cursor"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
     </LinearLayout>
