--- a/app/src/main/res/drawable/edt_bg_normal.xml
+++ b/app/src/main/res/drawable/edt_bg_normal.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="4px"
-                android:color="@color/colorBlue" />
+                android:color="#20000000" />
 
             <solid android:color="#00FFFFFF" />
 
