--- a/app/src/main/res/layout/get_driver_fragment.xml
+++ b/app/src/main/res/layout/get_driver_fragment.xml
@@ -25,8 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:alpha="0"
-            android:visibility="gone"
-            android:background="@android:color/black" />
+            android:background="@android:color/black"
+            android:visibility="gone" />
 
         <ImageButton
             android:id="@+id/my_pos"
