--- a/app/src/main/res/layout/get_driver_fragment.xml
+++ b/app/src/main/res/layout/get_driver_fragment.xml
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/map_marker" />
+            android:src="@drawable/ic_map_marker" />
 
 
         <RelativeLayout
