--- a/app/src/main/res/layout/detail_ride_fragment.xml
+++ b/app/src/main/res/layout/detail_ride_fragment.xml
@@ -277,7 +277,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/btn_style"
+            android:background="@drawable/btn_style_blue"
             android:fontFamily="@font/roboto"
             android:shadowColor="@color/colorBlue"
             android:text="@string/getdriver"
