--- a/app/src/main/res/layout/full_name_signup_fragment.xml
+++ b/app/src/main/res/layout/full_name_signup_fragment.xml
@@ -123,7 +123,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="14dp"
-            android:background="@drawable/btn_style"
+            android:background="@drawable/btn_style_blue"
             android:fontFamily="@font/roboto"
             android:shadowColor="@color/colorBlue"
             android:text="@string/next"
