--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlue">#1152FD</color>
     <color name="colorBlack">#2B2B2B</color>
+    <color name="colorGray">#C7CAD7</color>
 </resources>
