--- a/app/src/main/res/layout/confirm_phone_fragment.xml
+++ b/app/src/main/res/layout/confirm_phone_fragment.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical"
-    android:paddingBottom="20dp"
     android:weightSum="1">
 
     <ImageButton
@@ -125,34 +124,42 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/retry_send"
+            android:id="@+id/error_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/retry_code_send"
-            android:textColor="#50000000" />
+            android:textSize="12sp"
+            android:text="@string/errorCode"
+            android:textColor="#F91010"
+            android:visibility="invisible"/>
     </LinearLayout>
 
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
         android:layout_weight="0.95"
         android:gravity="bottom"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/retry_send"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textAlignment="center"
+            android:textColor="#50000000" />
 
         <Button
             android:id="@+id/next"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="14dp"
-            android:background="@drawable/btn_style_blue"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/btn_style_gray"
             android:fontFamily="@font/roboto"
-            android:shadowColor="@color/colorBlue"
             android:text="@string/next"
             android:textAllCaps="false"
             android:textSize="16sp" />
