--- a/app/src/main/res/layout/phone_signup_fragment.xml
+++ b/app/src/main/res/layout/phone_signup_fragment.xml
@@ -6,9 +6,6 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical"
-    android:paddingStart="15dp"
-    android:paddingEnd="15dp"
-    android:paddingBottom="20dp"
     android:weightSum="1"
     app:ignore="NamespaceTypo">
 
@@ -25,6 +22,8 @@
         android:visibility="invisible" />
 
     <LinearLayout
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.05"
@@ -83,6 +82,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:linksClickable="true"
             android:text="@string/terms_cooperation"
             android:textColor="#8B8B8B"
@@ -93,10 +94,12 @@
             android:id="@+id/next"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginTop="14dp"
-            android:background="@drawable/btn_style_blue"
+            android:background="@drawable/btn_style_gray"
             android:fontFamily="@font/roboto"
-            android:shadowColor="@color/colorBlue"
             android:text="@string/next"
             android:textAllCaps="false"
             android:textSize="16sp" />
