--- a/app/src/main/res/layout/detail_ride_fragment.xml
+++ b/app/src/main/res/layout/detail_ride_fragment.xml
@@ -7,25 +7,6 @@
     tools:context=".view.getdriver.GetDriverView">
 
 
-    <ImageButton
-        android:id="@+id/back_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/back_btn"
-        android:elevation="12dp"
-        android:padding="13dp"
-        android:src="@drawable/back_arrow" />
-
-
-    <com.yandex.mapkit.mapview.MapView
-        android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="false" />
-
-
     <LinearLayout
         android:id="@+id/main_info_layout"
         android:layout_width="match_parent"
@@ -395,12 +376,12 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
     <View
-        android:id="@+id/on_map_view"
+        android:id="@+id/on_map_view_detail_ride"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0"
         android:background="@android:color/black"
         android:visibility="gone" />
+
 </RelativeLayout>
