--- a/app/src/main/res/layout/get_driver_fragment.xml
+++ b/app/src/main/res/layout/get_driver_fragment.xml
@@ -7,25 +7,36 @@
     tools:context=".view.getdriver.GetDriverView">
 
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/dynamic_container"
+
+    <com.yandex.mapkit.mapview.MapView
+        android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="false" />
+
+    <View
+        android:id="@+id/on_map_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:background="@android:color/black"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/detail_layout"
+        layout="@layout/detail_ride_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/get_driver_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"
         tools:context="ui.dashboard.HomeFragment">
 
-        <com.yandex.mapkit.mapview.MapView
-            android:id="@+id/map"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="false" />
-
-        <View
-            android:id="@+id/on_map_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0"
-            android:background="@android:color/black"
-            android:visibility="gone" />
 
         <ImageButton
             android:id="@+id/my_pos"
@@ -269,10 +280,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@null"
+                        android:ellipsize="marquee"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
                         android:fontFamily="@font/roboto"
                         android:gravity="start|center"
                         android:padding="5dp"
                         android:paddingStart="0dp"
+                        android:scrollHorizontally="true"
+                        android:singleLine="true"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
@@ -283,13 +299,13 @@
                     android:id="@+id/address_map_marker_btn"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="14dp"
+                    android:layout_marginEnd="15dp"
                     android:background="@drawable/btn_style_black"
                     android:fontFamily="@font/roboto"
                     android:shadowColor="@color/colorBlue"
                     android:text="@string/ready"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"
                     android:textAllCaps="false"
                     android:textSize="16sp" />
 
